--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
+body {background-color: black;}
 
+div {
+width: 100px;
+height: 100px;
+border-style: dotted;
+border: width 2px;
+
+
+}
+
+    h1 {
+        color: white;
+        font-size: 20;
+    }
+p {
+    color:green;
+    font-size:12;
+}
+
+ol {
+    color:green;
+    font-size:12;
+}
+
+
+ul {
+    color:green;
+    font-size:12;
+}
