--- a/second.css
+++ b/second.css
@@ -1,1 +1,52 @@
+body {background-color: rgba(164, 215, 236, 0.812);}
 
+h1 {
+border-style:double;
+border-color: aquamarine;
+border-width: 4px;
+}
+
+h2 {
+    border-style: dotted;
+    background-color: aliceblue;
+    border-color: #db93c39d;
+    border-width:4px;
+}
+
+p {
+    color: black;
+    background-color:white;
+    border:2px black;
+    border-radius:12px;
+    padding:5px;
+
+}
+
+figure {
+    border: thin #5ebbc9de solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 400px;
+    margin: auto;
+}
+
+img {
+    max-width: 400px;
+    max-height: 400px;
+
+}
+
+figcaption {
+    background-color: rgba(155, 222, 217, 0.523);
+    color: rgba(202, 98, 246, 0.899);
+    font: italic smaller sans-serif;
+    padding: 6px;
+    text-align: center;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
