--- a/layout.css
+++ b/layout.css
@@ -1,1 +1,59 @@
+body {
+width: 90%;
+margin-left: auto;
+margin-right: auto;
+background-color: lightsteelblue;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+font-size:12px;
+}  
+    .myDiv {
+        border: 5px outset rgb(7, 7, 7);
+        background-color: lightblue;
+      }
 
+header {
+    background-color:gainsboro
+}
+h1 {
+    background-color: whitesmoke;
+border-style:dotted;
+border-color: black;
+border-width: 4px;
+}
+nav {
+    background-color:whitesmoke;
+    border-style:ridge;
+    border-width:2px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+section {
+    background-color:gainsboro;
+    float:left;
+    width:48%;
+    border-style:dashed;
+}
+
+aside {
+    border-style: dashed;
+    width: 48%;
+    float: right;
+    background-color:gainsboro;
+  }
+footer {
+    background-color:whitesmoke;
+    border-style:double;
+    border-width: 4px;
+
+}
+img {
+    max-width: 400px;
+    max-height: 400px;
+}  
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
